@@ -70,6 +70,8 @@ In alphabetical order (by last name)
 ** Patch [#10245] Patch to HTML escape the behavior name when using HTML Formatter
 * Michal Kwiatkowski
 ** Patch to get RSpec to work w/ Heckle +/- 1.2
+* Tim Lucas
+** Patch [#10631] redirect_to matcher doesn't respect request.host
 * Riley Lynch
 ** Patches for the rake task
 * Dan Manges
